@@ -12,7 +12,7 @@ sessionselection.cpp authdialog.cpp sndialog.cpp \
 gtkmm_log.cpp guihandler.cpp traficmodel.cpp traficplot.cpp logtextview.cpp mainfiletreeview.cpp selectfiletreeview.cpp mainnotebook.cpp mainmodel.cpp filemodel.cpp fipixbox.cpp mainstatusbar.cpp mainmenubar.cpp maintreeview.cpp \
 peermodel.cpp peertreeview.cpp \
 detailsmodel.cpp detailstreeview.cpp \
-mainwindow.cpp btgui.cpp
+mainwindow.cpp btgui.cpp guiutils.cpp
 
 noinst_HEADERS = initwindow.h progressdialog.h urldialog.h \
 errordialog.h questiondialog.h prefdialog.h aboutdialog.h aboutimage.h \
@@ -22,7 +22,7 @@ gtkmm_log.h guihandler.h traficmodel.h filemodel.h fipixbox.h traficplot.h logte
 peermodel.h peertreeview.h \
 detailsmodel.h detailstreeview.h \
 mainwindow.h sig_button_menu.h \
-gtkmm_ver.h usermessage.h
+gtkmm_ver.h usermessage.h guiutils.h
 
 btgui_LDADD   = $(top_builddir)/bcore/libbtgcore.la \
                 $(top_builddir)/bcore/client/libbtgclient.la \
