@@ -26,6 +26,8 @@
 #include "mainfiletreeview.h"
 #include "selectfiletreeview.h"
 
+#include <UI/gui/guiutils.h>
+
 #include "gtkmm_ver.h"
 
 #if GTKMM_2_6_OR_BETTER
@@ -58,6 +60,8 @@ namespace btg
             iconcolumn->set_renderer(*imagerenderer, filepieces);
             _treeview->append_column (*iconcolumn);
             _treeview->append_column("Filesize", filesize);
+            
+            headersSetResizable(*_treeview);
          }
 
          fileRecord::~fileRecord()
@@ -86,6 +90,8 @@ namespace btg
             Gtk::TreeViewColumn* togglecolumn = Gtk::manage(new Gtk::TreeViewColumn("Selected", *toggle_renderer));
             togglecolumn->set_renderer(*toggle_renderer, selected);
             _treeview->append_column(*togglecolumn);
+            
+            headersSetResizable(*_treeview);
          }
 
          selectRecord::~selectRecord()
