@@ -1,0 +1,49 @@
+/*
+ * btg Copyright (C) 2008 Roman Rybalko.
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+ */
+
+/*
+ * $Id$
+ */
+
+#ifndef GUIUTILS_H_
+#define GUIUTILS_H_
+
+#include <gtkmm.h>
+
+namespace btg
+{
+   namespace UI
+      {
+         namespace gui
+            {
+               /**
+                * \addtogroup gui
+                */
+               /** @{ */
+               
+               /// Calls set_resizeable() for each column
+               /// @param _tv TreeView object to process
+               void headersSetResizable(Gtk::TreeView & _tv);
+
+               /** @} */
+
+            } // namespace gui
+      } // namespace UI
+} // namespace btg
+
+#endif /*GUIUTILS_H_*/
